[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bid.tscn" type="PackedScene" id=3]
[ext_resource path="res://TT2020StyleB-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Speech.tscn" type="PackedScene" id=6]
[ext_resource path="res://emote_heart.png" type="Texture" id=7]
[ext_resource path="res://emote_dots3.png" type="Texture" id=8]
[ext_resource path="res://emote_faceAngry.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.960784, 0.85098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Status" type="Label" parent="."]
visible = false
margin_left = -220.0
margin_top = 224.0
margin_right = -154.0
margin_bottom = 321.0
custom_styles/normal = SubResource( 1 )
text = "[name] (D)
BID: _
TRICK: _
SCORE: _"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deal" type="Button" parent="."]
visible = false
margin_left = -220.0
margin_top = 160.0
margin_right = -156.0
margin_bottom = 208.0
text = "deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bids" type="Node2D" parent="."]
visible = false
position = Vector2( 4, 272 )

[node name="0" type="Button" parent="Bids"]
margin_left = -144.0
margin_top = -80.0
margin_right = -112.0
margin_bottom = -48.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="Bids"]
margin_left = -96.0
margin_top = -80.0
margin_right = -64.0
margin_bottom = -48.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="Bids"]
margin_left = -48.0
margin_top = -80.0
margin_right = -16.0
margin_bottom = -48.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="Bids"]
margin_top = -80.0
margin_right = 32.0
margin_bottom = -48.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="Bids"]
margin_left = 48.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = -48.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="Bids"]
margin_left = 96.0
margin_top = -80.0
margin_right = 128.0
margin_bottom = -48.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="Bids"]
margin_left = 144.0
margin_top = -80.0
margin_right = 176.0
margin_bottom = -48.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Button" parent="Bids"]
margin_left = 144.0
margin_top = -128.0
margin_right = 176.0
margin_bottom = -96.0
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Button" parent="Bids"]
margin_left = 96.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = -96.0
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Button" parent="Bids"]
margin_left = 48.0
margin_top = -128.0
margin_right = 80.0
margin_bottom = -96.0
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="Button" parent="Bids"]
margin_top = -128.0
margin_right = 32.0
margin_bottom = -96.0
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Button" parent="Bids"]
margin_left = -48.0
margin_top = -128.0
margin_right = -16.0
margin_bottom = -96.0
text = "11"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Button" parent="Bids"]
margin_left = -96.0
margin_top = -128.0
margin_right = -64.0
margin_bottom = -96.0
text = "12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="13" type="Button" parent="Bids"]
margin_left = -144.0
margin_top = -128.0
margin_right = -112.0
margin_bottom = -96.0
text = "13"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsDisplay" type="Label" parent="."]
visible = false
margin_left = 200.0
margin_top = 240.0
margin_right = 456.0
margin_bottom = 291.0
rect_scale = Vector2( 1.25, 1.25 )
custom_styles/normal = SubResource( 2 )
text = "Tc 4d 7h 2s 3s 4s 5s 6s 7s 8s 9s Td Jh"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Node2D" parent="."]
visible = false
position = Vector2( 4, 272 )

[node name="0" type="Button" parent="Cards"]
margin_left = -144.0
margin_top = -32.0
margin_right = -112.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="Cards"]
margin_left = -96.0
margin_top = -32.0
margin_right = -64.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="Cards"]
margin_left = -48.0
margin_top = -32.0
margin_right = -16.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="Cards"]
margin_top = -32.0
margin_right = 32.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="Cards"]
margin_left = 48.0
margin_top = -32.0
margin_right = 80.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="Cards"]
margin_left = 96.0
margin_top = -32.0
margin_right = 128.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="Cards"]
margin_left = 144.0
margin_top = -32.0
margin_right = 176.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Button" parent="Cards"]
margin_left = -144.0
margin_top = 16.0
margin_right = -112.0
margin_bottom = 48.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Button" parent="Cards"]
margin_left = -96.0
margin_top = 16.0
margin_right = -64.0
margin_bottom = 48.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Button" parent="Cards"]
margin_left = -48.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 48.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="Button" parent="Cards"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 48.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Button" parent="Cards"]
margin_left = 48.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 48.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Button" parent="Cards"]
margin_left = 96.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 48.0
text = "7c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -300.0
margin_top = -210.0
margin_right = 300.0
margin_bottom = -110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckBG" parent="." instance=ExtResource( 2 )]
modulate = Color( 0, 0, 0, 0.313726 )
position = Vector2( -445, -80 )
scale = Vector2( 0.6, 0.6 )

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( -445, -80 )
scale = Vector2( 0.6, 0.6 )

[node name="InfoPivot" type="Node2D" parent="."]
position = Vector2( 445, -60 )

[node name="Info" type="Label" parent="."]
margin_left = 400.0
margin_top = -110.0
margin_right = 490.0
margin_bottom = -10.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0.784314, 1 )
text = "LLXU1
10/12
+16"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card13" parent="." instance=ExtResource( 2 )]
position = Vector2( -300, 50 )

[node name="Card12" parent="." instance=ExtResource( 2 )]
position = Vector2( -250, 50 )

[node name="Card11" parent="." instance=ExtResource( 2 )]
position = Vector2( -200, 50 )

[node name="Card10" parent="." instance=ExtResource( 2 )]
position = Vector2( -150, 50 )

[node name="Card9" parent="." instance=ExtResource( 2 )]
position = Vector2( -100, 50 )

[node name="Card8" parent="." instance=ExtResource( 2 )]
position = Vector2( -50, 50 )

[node name="Card7" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 50 )

[node name="Card6" parent="." instance=ExtResource( 2 )]
position = Vector2( 50, 50 )

[node name="Card5" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 50 )

[node name="Card4" parent="." instance=ExtResource( 2 )]
position = Vector2( 150, 50 )

[node name="Card3" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 50 )

[node name="Card2" parent="." instance=ExtResource( 2 )]
position = Vector2( 250, 50 )

[node name="Card1" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 50 )

[node name="Bid0" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid1" parent="." instance=ExtResource( 3 )]
position = Vector2( 270, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid2" parent="." instance=ExtResource( 3 )]
position = Vector2( 220, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid3" parent="." instance=ExtResource( 3 )]
position = Vector2( 170, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid4" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid5" parent="." instance=ExtResource( 3 )]
position = Vector2( 70, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid6" parent="." instance=ExtResource( 3 )]
position = Vector2( 20, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid7" parent="." instance=ExtResource( 3 )]
position = Vector2( -30, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid8" parent="." instance=ExtResource( 3 )]
position = Vector2( -80, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid9" parent="." instance=ExtResource( 3 )]
position = Vector2( -130, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid10" parent="." instance=ExtResource( 3 )]
position = Vector2( -180, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid11" parent="." instance=ExtResource( 3 )]
position = Vector2( -230, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid12" parent="." instance=ExtResource( 3 )]
position = Vector2( -280, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="Bid13" parent="." instance=ExtResource( 3 )]
position = Vector2( -330, -110 )
scale = Vector2( 0.75, 0.75 )

[node name="FirstLead" type="Label" parent="."]
margin_left = -140.0
margin_top = -167.0
margin_right = 140.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.14902, 0.490196, 0.882353, 1 )
text = "FIRST LEAD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DealLabel" type="Label" parent="."]
margin_left = -495.0
margin_top = -150.0
margin_right = -395.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.75, 0.564, 0.0525, 1 )
text = "PRESS
TO
DEAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trick1" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 410, -120 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick2" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 425, -120 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick3" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 440, -120 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick4" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 455, -120 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick5" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 470, -120 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick6" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 485, -120 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick7" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 485, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick8" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 470, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick9" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 455, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick10" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 440, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick11" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 425, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick12" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 410, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="Trick13" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 395, -137 )
scale = Vector2( 0.06, 0.06 )

[node name="OffScreen" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="PositiveReaction" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 365.0
margin_top = -125.0
margin_right = 395.0
margin_bottom = -90.0
hint_tooltip = "Positive reaction (c)"
custom_fonts/font = ExtResource( 5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="PositiveReaction"]
position = Vector2( 15, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="NeutralReaction" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 365.0
margin_top = -85.0
margin_right = 395.0
margin_bottom = -50.0
hint_tooltip = "Neutral reaction (x)"
custom_fonts/font = ExtResource( 5 )
text = "o"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NeutralReaction"]
position = Vector2( 15, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="NegativeReaction" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 365.0
margin_top = -45.0
margin_right = 395.0
margin_bottom = -10.0
hint_tooltip = "Negative reaction (z)"
custom_fonts/font = ExtResource( 5 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NegativeReaction"]
position = Vector2( 15, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Speech" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -75 )
z_index = 1
z_as_relative = false
[connection signal="pressed" from="Deal" to="." method="_on_Deal_pressed"]
[connection signal="pressed" from="Bids/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="Bids/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Bids/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Bids/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Bids/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Bids/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Bids/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="Bids/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="Bids/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="Bids/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="Bids/10" to="." method="_on_10_pressed"]
[connection signal="pressed" from="Bids/11" to="." method="_on_11_pressed"]
[connection signal="pressed" from="Bids/12" to="." method="_on_12_pressed"]
[connection signal="pressed" from="Bids/13" to="." method="_on_13_pressed"]
[connection signal="pressed" from="Cards/0" to="." method="_on_C0_pressed"]
[connection signal="pressed" from="Cards/1" to="." method="_on_C1_pressed"]
[connection signal="pressed" from="Cards/2" to="." method="_on_C2_pressed"]
[connection signal="pressed" from="Cards/3" to="." method="_on_C3_pressed"]
[connection signal="pressed" from="Cards/4" to="." method="_on_C4_pressed"]
[connection signal="pressed" from="Cards/5" to="." method="_on_C5_pressed"]
[connection signal="pressed" from="Cards/6" to="." method="_on_C6_pressed"]
[connection signal="pressed" from="Cards/7" to="." method="_on_C7_pressed"]
[connection signal="pressed" from="Cards/8" to="." method="_on_C8_pressed"]
[connection signal="pressed" from="Cards/9" to="." method="_on_C9_pressed"]
[connection signal="pressed" from="Cards/10" to="." method="_on_C10_pressed"]
[connection signal="pressed" from="Cards/11" to="." method="_on_C11_pressed"]
[connection signal="pressed" from="Cards/12" to="." method="_on_C12_pressed"]
[connection signal="pressed" from="Deck" to="." method="_on_Deck_pressed"]
[connection signal="pressed" from="Card13" to="." method="_on_Card13_pressed"]
[connection signal="pressed" from="Card12" to="." method="_on_Card12_pressed"]
[connection signal="pressed" from="Card11" to="." method="_on_Card11_pressed"]
[connection signal="pressed" from="Card10" to="." method="_on_Card10_pressed"]
[connection signal="pressed" from="Card9" to="." method="_on_Card9_pressed"]
[connection signal="pressed" from="Card8" to="." method="_on_Card8_pressed"]
[connection signal="pressed" from="Card7" to="." method="_on_Card7_pressed"]
[connection signal="pressed" from="Card6" to="." method="_on_Card6_pressed"]
[connection signal="pressed" from="Card5" to="." method="_on_Card5_pressed"]
[connection signal="pressed" from="Card4" to="." method="_on_Card4_pressed"]
[connection signal="pressed" from="Card3" to="." method="_on_Card3_pressed"]
[connection signal="pressed" from="Card2" to="." method="_on_Card2_pressed"]
[connection signal="pressed" from="Card1" to="." method="_on_Card1_pressed"]
[connection signal="pressed" from="Bid0" to="." method="_on_Bid0_pressed"]
[connection signal="pressed" from="Bid1" to="." method="_on_Bid1_pressed"]
[connection signal="pressed" from="Bid2" to="." method="_on_Bid2_pressed"]
[connection signal="pressed" from="Bid3" to="." method="_on_Bid3_pressed"]
[connection signal="pressed" from="Bid4" to="." method="_on_Bid4_pressed"]
[connection signal="pressed" from="Bid5" to="." method="_on_Bid5_pressed"]
[connection signal="pressed" from="Bid6" to="." method="_on_Bid6_pressed"]
[connection signal="pressed" from="Bid7" to="." method="_on_Bid7_pressed"]
[connection signal="pressed" from="Bid8" to="." method="_on_Bid8_pressed"]
[connection signal="pressed" from="Bid9" to="." method="_on_Bid9_pressed"]
[connection signal="pressed" from="Bid10" to="." method="_on_Bid10_pressed"]
[connection signal="pressed" from="Bid11" to="." method="_on_Bid11_pressed"]
[connection signal="pressed" from="Bid12" to="." method="_on_Bid12_pressed"]
[connection signal="pressed" from="Bid13" to="." method="_on_Bid13_pressed"]
[connection signal="pressed" from="PositiveReaction" to="." method="_on_PositiveReaction_pressed"]
[connection signal="pressed" from="NeutralReaction" to="." method="_on_NeutralReaction_pressed"]
[connection signal="pressed" from="NegativeReaction" to="." method="_on_NegativeReaction_pressed"]
